# xbot_framework

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Readme.md
.github/workflows/: build.yaml  python.yaml
codegen/: CMakeLists.txt  requirements.txt
codegen/cmake/: AddCddl.cmake  AddFlatBuffersSchema.cmake  AddService.cmake  AddServiceInterface.cmake
codegen/templates/: ServiceInterfaceTemplate.cpp  ServiceInterfaceTemplate.hpp  ServiceTemplate.cpp  ServiceTemplate.hpp  rebuild_templates.sh  service.json
codegen/xbot_codegen/: xbot_codegen.py
examples/service-interface/EchoServiceExample/: EchoServiceInterface.cpp  EchoServiceInterface.hpp  main.cpp
examples/services/EchoService/: EchoService.cpp  EchoService.hpp  main.cpp  service.json
ext/: CMakeLists.txt
ext/etl/: CMakeLists.txt
ext/flatbuffers/: CMakeLists.txt
ext/flatcc/: CMakeLists.txt  patch.diff
ext/heatshrink/: CMakeLists.txt
ext/lwjson/: CMakeLists.txt
include/xbot/: config.hpp
include/xbot/datatypes/: XbotHeader.hpp
libxbot-service/: CMakeLists.txt
libxbot-service-interface/: CMakeLists.txt
libxbot-service-interface/include/xbot-service-interface/: HeatshrinkEncode.hpp  ServiceDiscovery.hpp  ServiceIO.hpp  ServiceInterfaceBase.hpp  Socket.hpp  XbotServiceInterface.hpp
libxbot-service-interface/include/xbot-service-interface/data/: ServiceDescription.hpp  ServiceIOInfo.hpp  ServiceInfo.hpp  ServiceInputInfo.hpp
libxbot-service-interface/src/: CrowToSpeedlogHandler.hpp  HeatshrinkEncode.cpp  PlotJugglerBridge.cpp  PlotJugglerBridge.hpp  RemoteLoggingReceiverImpl.cpp  RemoteLoggingReceiverImpl.hpp  ServiceDiscoveryImpl.cpp  ServiceDiscoveryImpl.hpp  ServiceIO.cpp  ServiceIOImpl.hpp  ServiceInterfaceBase.cpp  Socket.cpp  XbotServiceInterface.cpp
libxbot-service/include/xbot-service/: DataSource.hpp  Io.hpp  RemoteLogging.hpp  Schedule.hpp  Scheduler.hpp  Service.hpp
libxbot-service/include/xbot-service/portable/: function.hpp  socket.hpp  thread.hpp
libxbot-service/src/: DataSource.cpp  Lock.cpp  RemoteLogging.cpp  Schedule.cpp  Scheduler.cpp  Service.cpp  ServiceIo.cpp
libxbot-service/src/portable/linux/: Io.cpp  mutex.cpp  packet.cpp  queue.cpp  socket.cpp  system.cpp  thread.cpp
libxbot-service/src/portable/linux/include/xbot/: function_impl.hpp
libxbot-service/test/: all_tests.cpp
xbot_py/: pyproject.toml  requirements.txt
xbot_py/examples/: echo_no_schema.py  echo_with_schema.py
xbot_py/tests/: conftest.py  test_discovery.py  test_interface.py  test_io.py  test_schema.py
xbot_py/xbot_service_interface/: __init__.py  datatypes.py  discovery.py  exceptions.py  interface.py  schema.py  serialization.py
xbot_service_interface/: README.md  pyproject.toml  requirements.txt
xbot_service_interface/examples/: echo_no_schema.py  echo_service.json  echo_with_schema.py  lcd_hello.py
xbot_service_interface/tests/: test_interface.py  test_rpc.py  test_serialization.py
xbot_service_interface/xbot_service_interface/: discovery.py  interface.py  io.py  manager.py  schema.py  serialization.py  shell.py
xbot_service_interface_py/: .gitignore  README.md  pyproject.toml  requirements.txt
xbot_service_interface_py/examples/: gpio.json  lcd_hello.py
xbot_service_interface_py/tests/: test_datatypes.py  test_interface.py  test_rpc.py
xbot_service_interface_py/xbot_service_interface/: __init__.py  datatypes.py  exceptions.py  interface.py  io.py  log_receiver.py  manager.py  shell.py
